# 2020SMU-RM-VISION

./: ArmorDetector.cpp  ArmorDetector.hpp  CMakeLists.txt  ImageConsProd.cpp  README.md  RMVision.pro  RuneDetector.cpp  RuneResFilter.hpp  main.cpp  param_config.xml  param_config.xml~
deleted/: RuneDetector.hpp
include/: AngleSolver.hpp  ArmorDetector.hpp  Filter.hpp  ImageConsProd.hpp  LedController.hpp  Predictor.hpp  RMVideoCapture.hpp  RemoteController.hpp  Settings.hpp  cmdline.h  serial.h
src/: AngleSolver.cpp  ArmorDetector.cpp  ImageConsProd.cpp  Predictor.cpp  RMVideoCapture.cpp  RemoteController.cpp  main.cpp  serial.cpp
