cmake_minimum_required(VERSION 3.0.0)
project(main VERSION 0.1.0)
SET(CMAKE_CXX_COMPILER "g++")
set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread" )
find_package (Threads REQUIRED)
find_package(Python REQUIRED)
aux_source_directory(./src/ DIR_SRCS)
include_directories(/usr/local/include/opencv4)
include_directories(./include)
link_directories(/usr/local/lib)
link_libraries(libopencv_world.so)
add_executable(main ${DIR_SRCS})
set(CPACK_PROJECT_NAME ${main})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})